--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,2 +1,6 @@
 /* Copyright (c) 2018 Puskás Zsolt <errotan@gmail.com>
    Licensed under the MIT license. */
+
+.theme-color {
+    color: #e3ac44;
+}
