--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -1,3 +1,40 @@
-<div class="jumbotron">
-    <h1>Ncatalog</h1>
+<div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+            <img src="<?= $this->basePath('img/logo.png') ?>" width="32" height="32" alt="Logo" />
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Kategóriák
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <?php foreach ($categories as $category): ?>
+                        <?php
+
+                        if (!empty($category->childs)) {
+                            echo $this->partial('block/category', ['category' => $category]);
+                        } else {
+                            echo '<li><a class="dropdown-item" href="#">'.$category->getName().'</a></li>';
+                        }
+
+                        ?>
+                    <?php endforeach; ?>
+                    <div class="dropdown-divider"></div>
+                    <li><a class="dropdown-item" href="#">Új főkategória</a></li>
+                </ul>
+            </li>
+            </ul>
+        </div>
+    </nav>
+
+    <p class="mt-3">Válasszon kategóriát!</p>
+    <footer class="mt-3">
+        <p>&copy; 2018 Puskás Zsolt &lt;errotan@gmail.com&gt; - Terjeszthető az MIT licensz feltételei szerint</p>
+    </footer>
 </div>
