--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -13,6 +13,7 @@
         <?= $this->headLink(['rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath().'/img/favicon.ico'])
             ->prependStylesheet($this->basePath('css/style.css'))
             ->prependStylesheet($this->basePath('vendor/css/bootstrap.min.css'))
+            ->prependStylesheet($this->basePath('vendor/css/fontawesome-all.min.css'))
         ?>
 
         <?= $this->headScript()
