--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -1,6 +1,6 @@
 <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="<?= $this->basePath('/') ?>">
             <img src="<?= $this->basePath('img/logo.png') ?>" width="32" height="32" alt="Logo" />
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -15,26 +15,52 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <?php foreach ($categories as $category): ?>
-                        <?php
-
-                        if (!empty($category->childs)) {
-                            echo $this->partial('block/category', ['category' => $category]);
-                        } else {
-                            echo '<li><a class="dropdown-item" href="#">'.$category->getName().'</a></li>';
-                        }
-
-                        ?>
+                        <?= $this->partial('block/category', ['category' => $category]) ?>
                     <?php endforeach; ?>
                     <div class="dropdown-divider"></div>
-                    <li><a class="dropdown-item" href="#">Új főkategória</a></li>
+                    <li><a class="dropdown-item js-modal-load" href="#" data-url="<?= $this->basePath('category/new/0') ?>" data-toggle="modal" data-target="#modal">Új főkategória</a></li>
                 </ul>
             </li>
             </ul>
+            <i class="fas fa-lg fa-user-lock ml-3 pointer" title="Jogosultságok"></i>
+            <i class="fas fa-lg fa-sign-out-alt ml-3 pointer" title="Kilépés"></i>
         </div>
     </nav>
-
-    <p class="mt-3">Válasszon kategóriát!</p>
+    <?php if (isset($categoryPath)): ?>
+        <nav class="bg-light" aria-label="breadcrumb">
+            <ol class="breadcrumb bg-light">
+            Jelenlegi kategória >&nbsp;
+                <?php foreach ($categoryPath as $category): ?>
+                    <li class="breadcrumb-item"><?= $category ?></li>
+                <?php endforeach; ?>
+                <li>
+                    <i class="fas fa-sm fa-upload ml-3 pointer" title="Fájl feltöltés"></i>
+                    <i class="fas fa-sm fa-edit ml-1 pointer js-modal-load" data-url="<?= $this->basePath('category/edit/'.$categoryId) ?>" data-toggle="modal" data-target="#modal" title="Kategória szerkesztés"></i>
+                    <i class="fas fa-sm fa-trash-alt ml-1 pointer js-confirm" data-url="<?= $this->basePath('category/delete/'.$categoryId) ?>" title="Kategória törlés"></i>
+                </li>
+            </ol>
+        </nav>
+    <?php else: ?>
+        <p class="mt-3">Válasszon kategóriát!</p>
+    <?php endif; ?>
     <footer class="mt-3">
-        <p>&copy; 2018 Puskás Zsolt &lt;errotan@gmail.com&gt; - Terjeszthető az MIT licensz feltételei szerint</p>
+        <small>&copy; 2018 Puskás Zsolt &lt;errotan@gmail.com&gt; - Terjeszthető az MIT licensz feltételei szerint</small>
     </footer>
+    <div class="modal fade bd-example-modal-lg" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle">Adatbevitel</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">...</div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Bezárás</button>
+                    <button type="button" class="btn btn-primary js-modal-submit">Mentés</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
