--- a/module/Application/view/error/index.phtml
+++ b/module/Application/view/error/index.phtml
@@ -1,4 +1,4 @@
-<h1>An error occurred</h1>
+<h1>Hiba történt!</h1>
 <h2><?= $this->message ?></h2>
 
 <?php if (! empty($this->display_exceptions)) : ?>
