--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -18,7 +18,7 @@
                         <?= $this->partial('block/category', ['category' => $category]) ?>
                     <?php endforeach; ?>
                     <div class="dropdown-divider"></div>
-                    <li><a class="dropdown-item js-modal-load" href="#" data-url="<?= $this->basePath('category/new/0') ?>" data-toggle="modal" data-target="#modal">Új főkategória</a></li>
+                    <li><a class="dropdown-item js-modal-load" href="#" data-url="<?= $this->basePath('category/new/') ?>" data-toggle="modal" data-target="#modal">Új főkategória</a></li>
                 </ul>
             </li>
             </ul>
