--- a/module/Application/view/application/acl/new.phtml
+++ b/module/Application/view/application/acl/new.phtml
@@ -1,13 +1,13 @@
 <h4>Jogosultság létrehozása</h4>
 <form method="post" action="<?= $this->basePath('acl/new/'.$user->getId()) ?>">
 <div class="form-group row">
-        <label class="col-sm-3 col-form-label" for="staticUser">Felhasználó</label>
+        <label class="col-sm-2 col-form-label" for="staticUser">Felhasználó</label>
         <div class="col-sm-6">
             <input type="text" readonly class="form-control-plaintext" id="staticUser" value="<?= $user->getFullName() ?>">
         </div>
     </div>
     <div class="form-group row">
-        <label class="col-sm-3 col-form-label" for="category">Kategória</label>
+        <label class="col-sm-2 col-form-label" for="category">Kategória</label>
         <div class="col-sm-6">
             <select class="form-control" name="category" id="category">
                 <option value="0">-minden-</option>
@@ -16,20 +16,14 @@
         </div>
     </div>
     <div class="form-group row">
-        <label class="col-sm-3 col-form-label" for="exampleCheck1">Készíthet alkategóriát</label>
-        <div class="col-sm-6">
-            <input type="checkbox" name="cancreatecategory" class="form-check-input" id="exampleCheck1">
-        </div>
-    </div>
-    <div class="form-group row">
-        <label class="col-sm-3 col-form-label" for="exampleCheck2">Feltölthet</label>
-        <div class="col-sm-6">
+        <label class="col-sm-2 col-form-label" for="exampleCheck2">Feltölthet</label>
+        <div class="col-sm-6 ml-4">
             <input type="checkbox" name="canupload" class="form-check-input" id="exampleCheck2">
         </div>
     </div>
     <div class="form-group row">
-        <label class="col-sm-3 col-form-label" for="exampleCheck3">Letölthet</label>
-        <div class="col-sm-6">
+        <label class="col-sm-2 col-form-label" for="exampleCheck3">Letölthet</label>
+        <div class="col-sm-6 ml-4">
             <input type="checkbox" name="candownload" class="form-check-input" id="exampleCheck3">
         </div>
     </div>
